--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,17 +28,17 @@ classifiers = [
 ]
 
 dependencies = [
-    "numpy (>=1.22,<2.0)",
-    "pandas (>=1.3.0,<3.0)",
+    "numpy (>=1.26,<3.0)",
+    "pandas (>=2.2,<3.0)",
     "pyarrow (>=20.0,<21.0)",
-    "matplotlib (>=3.9.0,<4.0)",
     "vedo (>=2025.5.3)",
     "rasterio (>=1.3,<2.0)",
     "folium (>=0.20,<1)",
     "tqdm (>=4.66,<5.0)",
     "pyproj (>=3.6,<4.0)",
     "open3d (>=0.19,<1.0)",
-    "opendrive2lanelet==1.2.1",
+    "scipy (>=1.14,<2.0)",
+    "opendrive2lanelet (>=1.2,<2.0)",
 ]
 
 [project.urls]
